--- a/style.css
+++ b/style.css
@@ -1,13 +1,24 @@
+/* ffont family import  */
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans&display=swap');
+
 * {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
 }
 
+body {
+   background: #FFFFFF;
+   font-family: 'Work Sans', sans-serif;
+}
+
 .container {
    width: 1920px;
    height: 1322px;
    background: rgba(255, 144, 14, 0.1);
+   display: flex;
+   align-items: center;
+   flex-direction: column;
 }
 
 /* navbar style here */
@@ -15,12 +26,11 @@ nav {
    display: flex;
    align-items: center;
    justify-content: space-between;
-   padding: 0 130px;
-   max-width: 1100px;
+   padding: 0 100px;
+   max-width: 1500px;
    width: 100%;
-   height: 75px;
-   margin: 0 auto;
-   /* background: red; */
+   height: 90px;
+   margin: 0 20px;
 }
 
 nav>h1 {
@@ -42,17 +52,74 @@ nav>ul>li {
 
 }
 
-body {
-   background: #FFFFFF;
+
+
+.section-title {
+   text-align: center;
+   color: #131313;
+   margin-top: 100px;
+   margin-bottom: 30px;
+   width: 862px;
+   height: 225px;
+   /* margin-left: 450px; */
+}
+
+.section-subtitle {
+   font-weight: 700;
+   font-size: 64px;
+   text-align: center;
+   color: #131313;
+
+
+}
+
+.section-text {
+   font-weight: 400;
+   font-size: 16px;
+   text-align: center;
+   margin-top: 10px;
+}
+
+.btn-primary {
+   text-align: center;
+   margin-bottom: 50px;
+}
+
+.btn-text {
+
+   padding: 20px 25px;
+   border-radius: 5px;
+   color: #ffff;
+   border: none;
+   background-color: #FF900E;
+}
+
+.container .banner img {
+   width: 1340px;
+   height: 600px;
+   border-radius: 8px;
+
 }
 
 /* Media query style here */
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 688px) {
    nav {
       display: flex;
       flex-direction: column;
-
    }
+   .container{
+      width: 100%
+   }
+   .section-title{
+      width: 100%
+   }
+   .container .banner img {
+      width: 100%;
+      background-color: #FF900E;
+   
+   }
+
+
 
 
 }
