--- a/style.css
+++ b/style.css
@@ -246,7 +246,15 @@ feature-enjoy-title {
    border: 1px solid #FF900E;
    border-radius: 8px;
    box-sizing: border-box;
-
+   /* border: none; */
+   background: #FFFFFF;
+   box-shadow: inset 0 0 0 0 #f9e506;
+   transition: ease-out 0.25s;
+   font-size: 16px;
+   outline: none;
+}
+.box-section .btn-box1:hover{
+   box-shadow: inset 220px 0 0 0 #f9e506;
 }
 
 .box-section .btn-box1 .box-number {
