--- a/style.css
+++ b/style.css
@@ -211,7 +211,8 @@ feature-enjoy-title {
 
 }
 
-/* forth secton style here  */
+/* forth section style here  */
+
 .forth-container {
    max-width: 1250px;
    width: 100%;
@@ -281,33 +282,32 @@ feature-enjoy-title {
 
 
 .sponsor-section {
-   margin-top: 120px;
+   margin-top: 100px;
 
 
 }
 
 .sponsor-title {
-   /* margin-left: 350px;
-   margin-bottom: 20px; */
-
+   font-weight: 700;
+   font-size: 45px;
+   color: #131313;
+   padding-bottom: 24px;
+   text-align: center;
 
 }
 
 .sponsor-subtitle {
-   /* margin-left: 130px; */
+   text-align: center;
+   font-weight: 400;
+   font-size: 16px;
 }
 
 .sponsor-banner {
    display: flex;
-
-   text-align: center;
-   align-items: center;
-   background-color: #c0b408;
-
-}
-
-.sponsor-banner .banner-1 {
    filter: grayscale(1);
+   justify-content: space-evenly;
+   margin-top: 40px;
+
 }
 
 
@@ -338,20 +338,7 @@ feature-enjoy-title {
    padding: 0 25px;
    width: 100%;
    max-width: 1250px;
-   margin-top: 180px;
-}
-
-.sixth-container .btn-contact {
-   background-color: #d87272;
-   font-weight: 600;
-   font-size: 20px;
-   color: #F15B22;
-   border-radius: 6px;
-   border: 0;
-   padding: 18px 32px;
-   justify-content: center;
-   border-radius: 3px;
-   margin-right: 15px;
+   margin-top: 130px;
 }
 
 .sixth-section {
@@ -373,7 +360,14 @@ feature-enjoy-title {
    max-width: 1250px;
    width: 100%;
    margin: 0 auto;
-   padding: 0 25px;
+   padding: 25px 25px;
+
+}
+
+.footer-title {
+   text-align: center;
+   justify-content: center;
+
 }
 
 .footer-title {
