--- a/style.css
+++ b/style.css
@@ -112,27 +112,23 @@ nav>ul>li {
 /* feature section style  */
 
 .second-container {
-
-   gap: 73px;
    display: flex;
    align-items: center;
    max-width: 1250px;
    width: 100%;
    margin: 0 auto;
    padding: 0 25px;
-
-
 }
 
 .images-section {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
-   margin-left: 130px;
-   gap: 3px;
-   text-align: center;
+   gap: 20px;
+   padding: 4rem;
+   border-radius: 8px;
 }
 
-.second-container .images-section img {
+.images-section img {
    width: 250px;
    height: 250px;
 }
@@ -140,8 +136,8 @@ nav>ul>li {
 .feature-section {
    display: flex;
    flex-direction: column;
-   Width: 437px;
-   Height: 204px;
+   padding: 1em;
+
 }
 
 .feature-title .text-color1 {
@@ -165,17 +161,45 @@ nav>ul>li {
 }
 
 /* feature love and enjoy style  */
-.feature-enjoy {
-   /* background-color: #FF900E; */
+.third-container {
+   width: 100%;
+   max-width: 1250px;
+   margin: 0 auto;
+   padding: 0 25px;
 }
 
-feature-enjoy-title {
+
+.feature-contain-section {
+   /* background-color: #991e1e; */
+   margin-top: 180px;
+}
+
+.experience-section-title {
+   box-sizing: border-box;
+   width: 100%;
+   padding: 2px;
+   box-shadow: 10px 5px 5px rgb(226, 213, 213);
+}
+
+.feature-main-title {
+   font-weight: 700;
+   font-size: 45px;
    color: #131313;
-   Font size: 45px Font style: Bold
+   margin-bottom: 15px;
+
+}
+
+.feature-enjoy-title {
+   font-weight: 600;
+   font-size: 20px;
+   color: #131313;
+   margin: 10px 0;
 }
 
 .feature-enjoy-subtitle {
    color: #727272;
+   font-weight: 400;
+   font-size: 16px;
 }
 
 .third-container {
@@ -188,7 +212,7 @@ feature-enjoy-title {
 .feature-enjoy {
    display: flex;
    align-items: center;
-   gap: 10px;
+   gap: 20px;
    margin-left: 80px;
 
 }
@@ -206,9 +230,15 @@ feature-enjoy-title {
    color: #ffff;
    border: none;
    background-color: #FF900E;
-   width: 320px;
-   height: 200px;
+   width: 300px;
+   height: 180px;
+   font-weight: 600;
+   font-size: 45px;
 
+}
+
+.feature-contain-section .btn-primary3 .bt-text3 .text {
+   background-color: #991e1e;
 }
 
 /* forth section style here  */
@@ -222,6 +252,7 @@ feature-enjoy-title {
 
 .forth-section {
    margin-left: 70px;
+   margin-top: 110px;
 }
 
 .forth-section-title {
@@ -361,6 +392,7 @@ feature-enjoy-title {
    width: 100%;
    margin: 0 auto;
    padding: 25px 25px;
+   margin-bottom: 50px;
 
 }
 
@@ -404,13 +436,10 @@ feature-enjoy-title {
       background-color: #c0b408;
    }
 
-   /* .btn-primary .btn-text{
-      width: 100%;
-      margin-bottom: 20%;
-   } */
-
    .second-container {
       width: 100%;
+      max-width: 1250px;
+
    }
 
    .images-section,
